// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount/> Matches snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-myh0d-1 kJZrIh"
  >
    <div>
      <div
        class="CartCount__Dot-sc-myh0d-0 gubWeG count"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`<CartCount/> updates via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-myh0d-1 kJZrIh"
  >
    <div>
      <div
        class="CartCount__Dot-sc-myh0d-0 gubWeG count count-enter-done"
      >
        12
      </div>
    </div>
  </span>
</div>
`;
